--- a/_data/content/web/index.html
+++ b/_data/content/web/index.html
@@ -3,15 +3,15 @@ pagetitle: Home
 longtitle: Congratulations!
 alias: index
 published: 1
-introtext: null
+introtext: ''
 template: 1
 createdby: 1
 createdon: 1712232893
-uri: null
-properties: null
+uri: index
+properties: '{"contentblocks":{"content":"[{\"layout\":1,\"content\":{\"main\":[{\"value\":\"<p>You have successfully installed MODX Revolution&nbsp;[[++settings_version]]!<\/p>\\n<p>Now that MODX is installed you can login to the manager to create your templates, manage content and install third party extras to add functionality to your&nbsp;website. <\/p>\\n<h2>New to&nbsp;MODX?<\/h2>\\n<p>Pages on a MODX site are called <a href=\\\"https:\/\/docs.modx.com\/current\/en\/building-sites\/resources\\\">Resources<\/a>, and are visible on the left-hand side of the manager in the Resources tab. Resources can be nested under other resources, making it easy to create a tree of resources. There are different types of resources for different use&nbsp;cases.<\/p>\\n<p>Building your website is done through a combination of <strong>Templates<\/strong>, <strong>Template Variables<\/strong>, <strong>Chunks<\/strong>, <strong>Snippets<\/strong> and <strong>Plugins<\/strong>. Collectively these are known as <strong>Elements<\/strong>, and can also be found in the left-hand side of the manager, in the Elements&nbsp;tab.<\/p>\\n<p><a href=\\\"https:\/\/docs.modx.com\/current\/en\/building-sites\/elements\/templates\\\">Templates<\/a> contain the outer markup of any page. Each resource can only be assigned to a single template at a time. By adding <a href=\\\"https:\/\/docs.modx.com\/current\/en\/building-sites\/elements\/template-variables\\\">Template Variables<\/a> to a template, you can add custom fields for any resource using that particular&nbsp;template.<\/p>\\n<p>With <a href=\\\"https:\/\/docs.modx.com\/current\/en\/building-sites\/elements\/chunks\\\">Chunks<\/a> you can share parts of the markup, such as a header, across different templates. <a href=\\\"https:\/\/docs.modx.com\/current\/en\/building-sites\/elements\/snippets\\\">Snippets<\/a> are pieces of PHP that return dynamic content, such as summaries of other resources or the current date. With snippets, you will often use Chunks to mark up the pieces of content it returns, instead of mixing the PHP and&nbsp;HTML.<\/p>\\n<p>Finally, <a href=\\\"https:\/\/docs.modx.com\/current\/en\/extending-modx\/plugins\\\">Plugins<\/a> enable more advanced features by hooking into the extensive events system provided by&nbsp;MODX.<\/p>\\n<p>To learn more about MODX, be sure to check out the <a href=\\\"https:\/\/docs.modx.com\/current\/en\/getting-started\\\">Getting Started<\/a> section in the official&nbsp;documentation.<\/p>\",\"field\":6,\"settings\":{}}]},\"settings\":{},\"parent\":0,\"title\":\"\"}]","linear":[{"value":"<p>You have successfully installed MODX Revolution&nbsp;[[++settings_version]]!<\/p>\n<p>Now that MODX is installed you can login to the manager to create your templates, manage content and install third party extras to add functionality to your&nbsp;website. <\/p>\n<h2>New to&nbsp;MODX?<\/h2>\n<p>Pages on a MODX site are called <a href=\"https:\/\/docs.modx.com\/current\/en\/building-sites\/resources\">Resources<\/a>, and are visible on the left-hand side of the manager in the Resources tab. Resources can be nested under other resources, making it easy to create a tree of resources. There are different types of resources for different use&nbsp;cases.<\/p>\n<p>Building your website is done through a combination of <strong>Templates<\/strong>, <strong>Template Variables<\/strong>, <strong>Chunks<\/strong>, <strong>Snippets<\/strong> and <strong>Plugins<\/strong>. Collectively these are known as <strong>Elements<\/strong>, and can also be found in the left-hand side of the manager, in the Elements&nbsp;tab.<\/p>\n<p><a href=\"https:\/\/docs.modx.com\/current\/en\/building-sites\/elements\/templates\">Templates<\/a> contain the outer markup of any page. Each resource can only be assigned to a single template at a time. By adding <a href=\"https:\/\/docs.modx.com\/current\/en\/building-sites\/elements\/template-variables\">Template Variables<\/a> to a template, you can add custom fields for any resource using that particular&nbsp;template.<\/p>\n<p>With <a href=\"https:\/\/docs.modx.com\/current\/en\/building-sites\/elements\/chunks\">Chunks<\/a> you can share parts of the markup, such as a header, across different templates. <a href=\"https:\/\/docs.modx.com\/current\/en\/building-sites\/elements\/snippets\">Snippets<\/a> are pieces of PHP that return dynamic content, such as summaries of other resources or the current date. With snippets, you will often use Chunks to mark up the pieces of content it returns, instead of mixing the PHP and&nbsp;HTML.<\/p>\n<p>Finally, <a href=\"https:\/\/docs.modx.com\/current\/en\/extending-modx\/plugins\">Plugins<\/a> enable more advanced features by hooking into the extensive events system provided by&nbsp;MODX.<\/p>\n<p>To learn more about MODX, be sure to check out the <a href=\"https:\/\/docs.modx.com\/current\/en\/getting-started\">Getting Started<\/a> section in the official&nbsp;documentation.<\/p>","field":6,"settings":[]}],"fieldcounts":{"6":1},"_isContentBlocks":true}}'
 tvs:
-    auto_anchors: '@INHERIT 0'
-    auto_references: '@INHERIT 0'
+    auto_anchors: '0'
+    auto_references: '0'
     content_brief: ''
     content_cta: ''
     content_outline: ''
@@ -59,19 +59,22 @@ tvs:
 
 -----
 
-<p>You have successfully installed MODX Revolution&nbsp;[[++settings_version]]!</p>
+<div [[stripAsAlias:prepend=`id="`:append=`"`? &input=``]] class="ui vertical stripe segment [[setBackground? &background=`default`]]">
+    <div class="ui    main container">
+        [[$richTextSegment?
+    &content=`<p>You have successfully installed MODX Revolution&nbsp;[[++settings_version]]!</p>
 <p>Now that MODX is installed you can login to the manager to create your templates, manage content and install third party extras to add functionality to your&nbsp;website. </p>
-
 <h2>New to&nbsp;MODX?</h2>
-
 <p>Pages on a MODX site are called <a href="https://docs.modx.com/current/en/building-sites/resources">Resources</a>, and are visible on the left-hand side of the manager in the Resources tab. Resources can be nested under other resources, making it easy to create a tree of resources. There are different types of resources for different use&nbsp;cases.</p>
-
-<p>Building your website is done through a combination of <b>Templates</b>, <b>Template Variables</b>, <b>Chunks</b>, <b>Snippets</b> and <b>Plugins</b>. Collectively these are known as <b>Elements</b>, and can also be found in the left-hand side of the manager, in the Elements&nbsp;tab.</p>
-
+<p>Building your website is done through a combination of <strong>Templates</strong>, <strong>Template Variables</strong>, <strong>Chunks</strong>, <strong>Snippets</strong> and <strong>Plugins</strong>. Collectively these are known as <strong>Elements</strong>, and can also be found in the left-hand side of the manager, in the Elements&nbsp;tab.</p>
 <p><a href="https://docs.modx.com/current/en/building-sites/elements/templates">Templates</a> contain the outer markup of any page. Each resource can only be assigned to a single template at a time. By adding <a href="https://docs.modx.com/current/en/building-sites/elements/template-variables">Template Variables</a> to a template, you can add custom fields for any resource using that particular&nbsp;template.</p>
-
 <p>With <a href="https://docs.modx.com/current/en/building-sites/elements/chunks">Chunks</a> you can share parts of the markup, such as a header, across different templates. <a href="https://docs.modx.com/current/en/building-sites/elements/snippets">Snippets</a> are pieces of PHP that return dynamic content, such as summaries of other resources or the current date. With snippets, you will often use Chunks to mark up the pieces of content it returns, instead of mixing the PHP and&nbsp;HTML.</p>
-
 <p>Finally, <a href="https://docs.modx.com/current/en/extending-modx/plugins">Plugins</a> enable more advanced features by hooking into the extensive events system provided by&nbsp;MODX.</p>
-
-<p>To learn more about MODX, be sure to check out the <a href="https://docs.modx.com/current/en/getting-started">Getting Started</a> section in the official&nbsp;documentation.</p>
+<p>To learn more about MODX, be sure to check out the <a href="https://docs.modx.com/current/en/getting-started">Getting Started</a> section in the official&nbsp;documentation.</p>`
+    &segment_type=``
+    &background=``
+	&padding=`regular`
+    &alignment=``
+]]
+    </div>
+</div>
