--- a/_data/content/global/forms/contact-example.html
+++ b/_data/content/global/forms/contact-example.html
@@ -17,6 +17,7 @@ uri: forms/contact-example
 show_in_tree: 0
 properties: '{"contentblocks":{"content":"[{\"layout\":14,\"content\":{\"main\":[{\"chunk_properties\":{\"elementStatus\":\"solid\",\"elementPreview\":\"\"},\"field\":27,\"settings\":{\"field_name\":\"Your question\",\"field_required\":\"1\",\"field_layout\":\"inherit\",\"helptext_position\":\"bottom\",\"field_rows\":\"7\",\"field_placeholder\":\"\",\"field_helptext\":\"\"}},{\"chunk_properties\":{\"elementStatus\":\"solid\",\"elementPreview\":\"\"},\"field\":26,\"settings\":{\"field_name\":\"Your name\",\"field_required\":\"1\"}},{\"chunk_properties\":{\"elementStatus\":\"solid\",\"elementPreview\":\"\"},\"field\":41,\"settings\":{\"field_name\":\"Email address\"}},{\"chunk_properties\":{\"elementStatus\":\"solid\",\"elementPreview\":\"\"},\"field\":26,\"settings\":{\"field_name\":\"Phone number\"}}]},\"settings\":{\"legend\":\"Contact\"},\"parent\":0,\"title\":\"\"}]","linear":[{"chunk_properties":{"elementStatus":"solid","elementPreview":""},"field":27,"settings":{"field_name":"Your question","field_required":"1","field_layout":"inherit","helptext_position":"bottom","field_rows":"7","field_placeholder":"","field_helptext":""}},{"chunk_properties":{"elementStatus":"solid","elementPreview":""},"field":26,"settings":{"field_name":"Your name","field_required":"1"}},{"chunk_properties":{"elementStatus":"solid","elementPreview":""},"field":41,"settings":{"field_name":"Email address"}},{"chunk_properties":{"elementStatus":"solid","elementPreview":""},"field":26,"settings":{"field_name":"Phone number"}}],"fieldcounts":{"27":1,"26":2,"41":1},"_isContentBlocks":true}}'
 tvs:
+    fb_attachment_path: '../uploads/_forms/[[*id]]'
     fb_autoresponder_from: ''
     fb_autoresponder_from_name: ''
     fb_autoresponder_message: ''
@@ -38,6 +39,7 @@ tvs:
     fb_redirect_id: ''
     fb_renderhooks: ''
     fb_save_form: default
+    fb_store_attachments: default
     fb_store_data: '0'
     fb_store_time: '300'
     fb_submit_button: ''
